--- a/04 Lineal Regression/Clasificación Flores.ipynb
+++ b/04 Lineal Regression/Clasificación Flores.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,88 +22,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      ".. _iris_dataset:\n",
-      "\n",
-      "Iris plants dataset\n",
-      "--------------------\n",
-      "\n",
-      "**Data Set Characteristics:**\n",
-      "\n",
-      "    :Number of Instances: 150 (50 in each of three classes)\n",
-      "    :Number of Attributes: 4 numeric, predictive attributes and the class\n",
-      "    :Attribute Information:\n",
-      "        - sepal length in cm\n",
-      "        - sepal width in cm\n",
-      "        - petal length in cm\n",
-      "        - petal width in cm\n",
-      "        - class:\n",
-      "                - Iris-Setosa\n",
-      "                - Iris-Versicolour\n",
-      "                - Iris-Virginica\n",
-      "                \n",
-      "    :Summary Statistics:\n",
-      "\n",
-      "    ============== ==== ==== ======= ===== ====================\n",
-      "                    Min  Max   Mean    SD   Class Correlation\n",
-      "    ============== ==== ==== ======= ===== ====================\n",
-      "    sepal length:   4.3  7.9   5.84   0.83    0.7826\n",
-      "    sepal width:    2.0  4.4   3.05   0.43   -0.4194\n",
-      "    petal length:   1.0  6.9   3.76   1.76    0.9490  (high!)\n",
-      "    petal width:    0.1  2.5   1.20   0.76    0.9565  (high!)\n",
-      "    ============== ==== ==== ======= ===== ====================\n",
-      "\n",
-      "    :Missing Attribute Values: None\n",
-      "    :Class Distribution: 33.3% for each of 3 classes.\n",
-      "    :Creator: R.A. Fisher\n",
-      "    :Donor: Michael Marshall (MARSHALL%PLU@io.arc.nasa.gov)\n",
-      "    :Date: July, 1988\n",
-      "\n",
-      "The famous Iris database, first used by Sir R.A. Fisher. The dataset is taken\n",
-      "from Fisher's paper. Note that it's the same as in R, but not as in the UCI\n",
-      "Machine Learning Repository, which has two wrong data points.\n",
-      "\n",
-      "This is perhaps the best known database to be found in the\n",
-      "pattern recognition literature.  Fisher's paper is a classic in the field and\n",
-      "is referenced frequently to this day.  (See Duda & Hart, for example.)  The\n",
-      "data set contains 3 classes of 50 instances each, where each class refers to a\n",
-      "type of iris plant.  One class is linearly separable from the other 2; the\n",
-      "latter are NOT linearly separable from each other.\n",
-      "\n",
-      ".. topic:: References\n",
-      "\n",
-      "   - Fisher, R.A. \"The use of multiple measurements in taxonomic problems\"\n",
-      "     Annual Eugenics, 7, Part II, 179-188 (1936); also in \"Contributions to\n",
-      "     Mathematical Statistics\" (John Wiley, NY, 1950).\n",
-      "   - Duda, R.O., & Hart, P.E. (1973) Pattern Classification and Scene Analysis.\n",
-      "     (Q327.D83) John Wiley & Sons.  ISBN 0-471-22361-1.  See page 218.\n",
-      "   - Dasarathy, B.V. (1980) \"Nosing Around the Neighborhood: A New System\n",
-      "     Structure and Classification Rule for Recognition in Partially Exposed\n",
-      "     Environments\".  IEEE Transactions on Pattern Analysis and Machine\n",
-      "     Intelligence, Vol. PAMI-2, No. 1, 67-71.\n",
-      "   - Gates, G.W. (1972) \"The Reduced Nearest Neighbor Rule\".  IEEE Transactions\n",
-      "     on Information Theory, May 1972, 431-433.\n",
-      "   - See also: 1988 MLC Proceedings, 54-64.  Cheeseman et al\"s AUTOCLASS II\n",
-      "     conceptual clustering system finds 3 classes in the data.\n",
-      "   - Many, many more ...\n"
+      "[0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0\n",
+      " 0 0 0 0 0 0 0 0 0 0 0 0 0 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1\n",
+      " 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 2 2 2 2 2 2 2 2 2 2 2\n",
+      " 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2\n",
+      " 2 2]\n"
      ]
     }
    ],
    "source": [
     "#Importamos nuestra información\n",
     "data = datasets.load_iris()\n",
-    "print(data.DESCR)\n"
+    "#print(data.DESCR)\n",
+    "print(data.target)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -111,12 +54,15 @@
     "X = data.data[:, 2:4]\n",
     "Y = data.target\n",
     "\n",
+    "#1e5 parametro para definir umbral de activación\n",
+    "#solver parametro, para que pueda trabajar más rápido con los datos\n",
+    "#'multinomial' nos permite trabajar con más de dos clasificaciones (no binarias)\n",
     "logit = LogisticRegression(C=1e5, solver='lbfgs', multi_class='multinomial')\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -127,13 +73,14 @@
     "y_min, y_max = X[:, 1].min() - .5, X[:, 1].max() + .5\n",
     "h = .02 \n",
     "\n",
+    "#meshgrid genera matriz e intenta buscar \n",
     "xx, yy = np.meshgrid(np.arange(x_min, x_max, h), np.arange(y_min, y_max, h))\n",
     "Z = logit.predict(np.c_[xx.ravel(), yy.ravel()])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -165,13 +112,6 @@
     "\n",
     "plt.show()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
